# poetry-docker-study

./: README.md  test.sh
python-no-gpu-example/: Dockerfile  Untitled.ipynb  docker-compose.yml  pyproject.toml
torch-with-gpu/: Dockerfile  Untitled.ipynb  docker-compose.yml  pyproject.toml
