[tool.poetry]
name = "poetry-docker-study"
version = "0.1.0"
description = ""
authors = ["Koichi Miyamoto <m5813k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.1.10"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
